refactored: removed codesmells